==> MorseMicro/mm-iot-sdk/framework/src/platforms/mm-mm6108-ekh05-sdio/mm_shims/wlan_hal.c <==
#include "mmekh05_hal_common.h"
#include "stm32u5xx_ll_sdmmc.h"
#define ENABLE_SDIO_4BIT (1)
#define ENABLE_WLAN_HAL_LOG_ERR (1)
#define LOG_ERR(...) printf(__VA_ARGS__)
#define LOG_ERR(...) do { } while (0)
#define SD_INIT_FREQ_HZ                     400000U
#define DMA_WAIT_TMO (100)

bool mmhal_wlan_spi_irq_is_asserted(void)
{
    return __SDMMC_GET_IT(WLAN_SDMMC, SDMMC_IT_SDIOIT);
}

void BUSY_IRQ_HANDLER(void)
{
    if (LL_EXTI_IsActiveRisingFlag_0_31(BUSY_IRQ_LINE) != RESET)
    {
        LL_EXTI_ClearRisingFlag_0_31(BUSY_IRQ_LINE);
        if (busy_irq_handler != NULL)
        {
            busy_irq_handler();
            /* Kick the SDIO controller in case the interrupt line is low but the interrupt
             * flag is not set. */
            __SDMMC_OPERATION_DISABLE(WLAN_SDMMC);
            __SDMMC_OPERATION_ENABLE(WLAN_SDMMC);
        }
    }
}
