==> MorseMicro/mm-iot-sdk/framework/src/platforms/mm-ekh08-f429/mm_shims/wlan_hal.c <==
#include "mmhal.h"
#include "mmosal.h"
#include "bsp.h"
#define BYTE_TRAIN 16
#define DMA_WAIT_TMO (10) /* 10ms */
#define DMA_TRANSFER_MIN_LENGTH (16)

bool mmhal_wlan_spi_irq_is_asserted(void)
{
    return !LL_GPIO_IsInputPinSet(SPI_IRQ_GPIO_Port, SPI_IRQ_Pin);
}

void BUSY_IRQ_HANDLER(void)
{
    if (LL_EXTI_IsActiveFlag_0_31(BUSY_IRQ_LINE) != RESET)
    {
        LL_EXTI_ClearFlag_0_31(BUSY_IRQ_LINE);
        if (busy_irq_handler != NULL)
        {
            busy_irq_handler();
        }
    }
}
